--- a/javajam.css
+++ b/javajam.css
@@ -25,6 +25,8 @@ footer {
   text-align: center;
 }
 
-p {
-  color: red;
+#container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
 }
