--- a/javajam.css
+++ b/javajam.css
@@ -5,12 +5,12 @@ body {
 }
 
 header {
-  background-color: #D2B48C
+  background-color: #D2B48C;
   text-align: center;
 }
 
 h1 {
-  background-color: #D2B48C
+  background-color: #D2B48C;
   line-height: 200%;
 }
 
